deployy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbk
  namespace: default
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: myapp
    spec:
      serviceAccountName: default
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: user
                  operator: In
                  values:
                    - door
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                    - door
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: dockerdep-10-app
        image: pknnd/dotnetdemo-app
        ports:
        - containerPort: 80
