service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: mycluster
spec:
  selector:
    app: dotnetdemo
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
